[gd_scene load_steps=7 format=3 uid="uid://xdo2j3gtlgav"]

[ext_resource type="Script" path="res://Menus/title_menu.gd" id="1_08aeo"]
[ext_resource type="Texture2D" uid="uid://bifqyi3wm5643" path="res://Sprites/TrashMan.png" id="2_41rr3"]
[ext_resource type="Texture2D" uid="uid://cg6v6efjxjpty" path="res://Sprites/trashcan.png" id="3_3kej3"]
[ext_resource type="Texture2D" uid="uid://bsv2bk6kt86ex" path="res://Sprites/title.png" id="4_chkpn"]
[ext_resource type="FontFile" uid="uid://cqsvwr0rmlcn0" path="res://Fonts/TrashMan.ttf" id="5_nqsgw"]
[ext_resource type="PackedScene" uid="uid://cfs02u6snjey1" path="res://Menus/options_menu.tscn" id="7_xmwgh"]

[node name="Title Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08aeo")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(405, 293)
scale = Vector2(9.87871, 9.87871)
texture = ExtResource("2_41rr3")

[node name="Sprite2D2" type="Sprite2D" parent="Panel"]
position = Vector2(58, 265)
scale = Vector2(8.30242, 8.30242)
texture = ExtResource("3_3kej3")

[node name="Sprite2D3" type="Sprite2D" parent="Panel"]
position = Vector2(209, 97)
rotation = 0.233693
scale = Vector2(8.78751, 8.78751)
texture = ExtResource("4_chkpn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 126.0
offset_right = 221.0
offset_bottom = 192.0
scale = Vector2(2.28469, 1.30087)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqsgw")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqsgw")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nqsgw")
text = "Quit"

[node name="Options Menu" parent="." instance=ExtResource("7_xmwgh")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
